Fix: Remove invalid nodeVersion property from vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,5 @@
     "NEXT_PUBLIC_API_URL": "@api_url"
   },
   "buildCommand": "pnpm build",
-  "framework": "nextjs",
-  "nodeVersion": "20.x"
+  "framework": "nextjs"
 }
