--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.90.1",
     "@vercel/analytics": "1.3.1",
+    "@vercel/speed-insights": "^1.3.1",
     "autoprefixer": "^10.4.20",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
